UNRELEASED, S3QL tip

  * Fixed a race condition that could lead to a hanging mount.s3ql
    process and hanging test_thread_hang() unit test.

2014-11-09, S3QL 2.12

  * The s3c backend has a new 'dumb-copy' option. If this option
    is enabled, copy operations are assumed to have succeeded
    as soon as the server returns a '200 OK' status, without
    checking the contents of the response body.

  * The swift and s3c backends have a new 'disable-expect100' to
    disable support for the 'Expect: continue' header. Using this
    option allows S3QL to work with storage servers without proper
    HTTP 1.1 support, but may decrease performance as object data will
    be transmitted to the server more than once in some circumstances.

  * contrib/benchmark.py is now working again.

  * The `tcp-timeout` backend option is now actually working
    instead of resulting in a "TypeError".

  * Fixed a problem where saving metadata would fail with
    "ValueError: Can't dump NULL values".

  * s3qlstat now also gives information about cache usage.

2014-09-04, S3QL 2.11.1

  * By popular demand, mount.s3ql is now able to daemonize again
    and also does so by default.

  * Un-encrypted file systems (created with mkfs.s3ql --plain) can now
    be upgraded to the newest revision.

  * S3QL now automatically retries a request if a backend server
    reports a 408 (Request Timeout) status code.

  * The Google Storage backend now copes better with server errors
    when refreshing an OAuth2 access token.

2014-08-27, S3QL 2.11

  * SECURITY UPDATE (CVE-2014-0485).

    A remote code execution vulnerability was fixed.

    An attacker with control over the communication with the storage
    backend or the ability to manipulate the data stored in the
    backend was able to trigger execution of arbitrary code by
    mount.s3ql, fsck.s3ql, mkfs.s3ql, s3qladm and s3ql_verify. Both
    encrypted and unencrypted file systems were vulnerable.
